# Fast-Api-Crud

./: README.md  pyproject.toml
fastapi-vanillajs/: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml  requirements.txt  vercel.json
fastapi-vanillajs/fastapi_app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
fastapi-vanillajs/frontend/: env-config.js  index.html
fastapi-vanillajs/tests/: test_api.py
