[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.100.0",
	"uvicorn[standard]==0.22.0",
	"SQLAlchemy==2.0.19",
	"alembic==1.11.1",
	"python-jose==3.3.0",
	"passlib[bcrypt]==1.7.4",
	"pydantic>=2.0.0",
	"python-multipart==0.0.6",
	"psycopg2-binary==2.9.6",
	"python-dotenv==1.0.0",
]
